fix: footer taking up too much space

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ section {
 }
 footer {
   text-align: center;
-  padding: 1rem 0;
+  padding: 0.1rem 0;
   background: #222;
   color: #fff;
   position: fixed;
